# Credentials_Manager

./: README.md  poetry.txt  pyproject.toml  requirements.txt
docs/: DOC-01_product_requirements_document.md  DOC-02_software_architecture_document.md  DOC-03_database_schema_dictionary.md  DOC-04_test_plan_threat_matrix.md  DOC-05_high_level_design_document.md  DOC-06_low_level_design_document.md  documentations.md  idea_raw.md  work_activity.md
docs/UI_UX/: UI_UX.pptx  ~$UI_UX.pptx
src/: test.py
src/vault_local/: pyproject.toml
src/vault_local/models/: database_model.py
src/vault_local/test/: test_database.py
