[tool.poetry]
name = "credentials-app"
version = "0.1.0"
description = "A local-first, zero-knowledge credentials manager built with Flet and Python."
authors = ["mdrayhan03 <phylosopherhossain2022@gmail.com>"]
readme = "README.md"
license = "MIT" # <--- Explicitly added license type (Change to GPL-3.0, Apache-2.0, or Proprietary if applicable)
packages = [{include = "models"}, {include = "viewmodels"}, {include = "views"}]

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.85.3"
cryptography = "^49.0.0"
pip-system-certs = "^5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
flet-cli = "^0.85.3"
flet-desktop = "^0.85.3"
flet-web = "^0.85.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# =====================================================================
# FLET COMPILATION CONFIGURATION (Do Not Delete)
# =====================================================================
[tool.flet]
org = "com.mycompany"
product = "credentials-app"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"