[project]
name = "credentials-app"
version = "0.1.0"
description = "write it later"
authors = [
    {name = "mdrayhan03",email = "phylosopherhossain2022@gmail.com"}
]
requires-python = "3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
